cmake_minimum_required (VERSION 3.8)
project ("Homework 3_10_2")
add_executable (CMakeTarget main.cpp Equilateral_triangle.cpp Equilateral_triangle.h
Figure.cpp Figure.h Isosceles_triangle.cpp Isosceles_triangle.h Parallelogram.cpp Parallelogram.h
Quadrangle.cpp Quadrangle.h Rectangle.cpp Rectangle.h Rhombus.cpp Rhombus.h  Right_triangle.cpp Right_triangle.h
Square.cpp Square.h Triangle.cpp Triangle.h)
